# dioxus_bug

./: Cargo.toml
.cargo/: config.toml
server/: Cargo.toml
server/src/: main.rs
web/: Cargo.toml
web/assets/: main.css
web/src/: lib.rs  main.rs
