[workspace]
resolver = "3"
members = [
    "web",
    "server",
]

[workspace.package]
edition = "2021"

[workspace.dependencies]
server = { path = "server" }
web = { path = "web" }
dioxus = { version = "0.7.0-alpha.1" }

# [profile.dev]
# opt-level = 1

# # Enable high optimizations for dependencies (incl. Bevy), but not for our code:
# [profile.dev.package."*"]
# opt-level = 3

[profile.wasm-dev]
inherits = "dev"
opt-level = 1

[profile.server-dev]
inherits = "dev"

[profile.android-dev]
inherits = "dev"
