[package]
name = "server"
version = "0.1.0"
edition = { workspace = true }

[dependencies]
axum = { version = "0.8.4", features = [
    "multipart",
    "http2",
    "tracing",
    "macros",
] }
dioxus = { workspace = true, features = ["fullstack", "router", "server"] }
web = { workspace = true }
tokio = { version = "1.45.1" }
